<resources>
    <string name="app_name">ProjectOne</string>
    <string name="email">Enter E-mail:</string>
    <string name="password">Enter Password:</string>
    <string name="login">Log In</string>
    <string name="login_error">Invalid E-Mail/Password. Please try again.</string>
    <string name="glossary">Glossary/Matching Game</string>
    <string name="crossword">Crossword Puzzle</string>
    <string name="parts">Take Parts</string>
    <string name="picture">Picture Story</string>
    <string name="readspeak">Reading/Speaking</string>
    <string name="select_story">\t\t\t\t\t\t\t\t\tSelect a Picture Story to load.\nSeleccione una historia de imagen para cargar.</string>
    <string name="maria">Chapter One:\nMaria\'s Story</string>
    <string name="john">Chapter Two:\nJohn\'s Story</string>
    <string name="alicia">Chapter Three:\nAlicia\'s Story</string>
    <string name="larisa">Chapter Four:\nLarisa\'s Story</string>
    <string name="help">Help / Ayuda</string>
    <string name="mariaone">This is Maria.\nElla es Maria.</string>
    <string name="mariatwo">Maria was sick last year.\nMaria estuvo enferma el año pasado.</string>
    <string name="mariathree">She did not go to the doctor.\nElla no fue al médico.</string>
    <string name="mariafour">One night she could not breathe.\nUna noche no pudo respirar.</string>
    <string name="mariafive">Her husband took her to the <b>emergency</b> room.\nSu esposo la llevó a la sala de <b>emergencias</b>.</string>
    <string name="mariasix">She stayed in the hospital for three days.\nElla permaneció en el hospital por tres días.\n(PART ONE END)</string>
    <string name="mariaseven">Maria is sick again. She has a bad cough.\nMaria está enferma de nuevo. Ella tiene una tos fuerte.</string>
    <string name="mariaeight">She does not want the cough to get worse. She does not want to go to the emergency room.\nElla no quiere que la tos empeore. Ella no quiere ir a la sala de emergencias.</string>
    <string name="marianine">She calls the health center to make an <b>appointment</b>.\nElla llama al centro de salud para hacer una <b>cita</b>.</string>
    <string name="mariaten">She also asks for an interpreter.\nElla también pide un intérprete.\n(PART TWO END)</string>
    <string name="mariaeleven">At the health center they ask Maria, "What is your name?"\nEn el centro de salud le preguntan a Maria: "¿Cómo te llamas?"</string>
    <string name="mariatwelve">They ask, "Do you have <b>health insurance</b>?"\nPreguntan: "¿Tiene <b>seguro de salud</b>?"</string>
    <string name="mariathirteen">Maria gives them her insurance card.\nMaria les da su tarjeta de seguro.\n(PART 3 END)</string>
    <string name="mariafourteen">They give her a form to fill out. The form is in English. Maria asks for a form in Spanish.\nLe dan un formulario para completar. El formulario está en inglés. Maria pide un formulario en español.</string>
    <string name="mariafifteen">Maria asks for an <b>interpreter</b>.\nMaria pide un <b>intérprete</b>.\n(STORY END)</string>
    <string name="mq1">1. Why did Maria go to the hospital? ¿Por qué fue Maria al hospital?</string>
    <string name="mq2">2. Why does she make an appointment at the health center?\n¿Por qué hace una cita en el centro de salud?</string>
    <string name="mq3">3. What do they ask Maria when she arrives at the health center?\n¿Qué le preguntan a María cuando llega al centro de salud?</string>
    <string name="mq4">4. Why does she ask for an interpreter? ¿Por qué pide una intérprete?</string>
    <string name="johnone">John is 50 years old.\nJohn tiene 50 años.</string>
    <string name="johntwo">He is a healthy man.\nEl es un hombre sano.</string>
    <string name="johnthree">Once a year he goes to his primary care physician for a <b>checkup</b>.\nUna vez al año acude a su médico de atención primaria para un <b>chequeo</b>.\n(PART 1 END)</string>
    <string name="johnfour">He calls his primary care center to make an <b>appointment</b>.\nLlama a su centro de atención primaria para hacer una <b>cita</b>.</string>
    <string name="johnfive">He says, "I need to make an appointment for a checkup."\nÉl dice: "Necesito hacer una cita para un chequeo".</string>
    <string name="johnsix">The woman on the phone says, "Please come in on Tuesday at 4:30 pm."\nLa mujer en el teléfono dice: "Por favor, vengan el martes a las 4:30 pm".\n(PART 2 END)</string>
    <string name="johnseven">When John arrives at the primary care center, the woman at the front desk gives him a <b>health history form</b>.\nCuando John llega al centro de atención primaria, la mujer de la recepción le entrega un <b>formulario de historial de salud</b>.</string>
    <string name="johneight">He fills out the health history form while he waits for the physician\'s assistant.\nRellena el formulario de historial de salud mientras espera al asistente del médico.\n(PART 3 END)</string>
    <string name="johnnine">The form asks, "Do you have any <b>allergies</b>? Do you take any medicines?"\nEl formulario pregunta: "¿Tiene alguna <b>alergia</b>? ¿Toma algún medicamento?"</string>
    <string name="johnten">He thinks of the questions to ask the physician\'s assistant.\nPiensa en las preguntas para hacerle al asistente del médico.\n(STORY END)</string>
    <string name="jq1">1. How does John stay healthy?\n¿Cómo se mantiene saludable John?</string>
    <string name="jq2">2. Why does he call his primary care physician?\n¿Por qué llama a su médico de atención primaria?</string>
    <string name="jq3">3. What do they give John when he arrives at the primary care center?\n¿Qué le dan a John cuando llega al centro de atención primaria?</string>
    <string name="jq4">4. What questions do you think John will ask his primary care physician?\n¿Qué preguntas cree que John le hará a su médico de atención primaria?</string>
    <string name="aliciaone">Alicia went to the doctor.\nAlicia fue al médico.</string>
    <string name="aliciatwo">The doctor gave her a prescription.\nEl doctor le dio una receta.</string>
    <string name="aliciathree">Alicia took the prescription to the pharmacy.\nAlicia llevó la receta a la farmacia.</string>
    <string name="aliciafour">She gave the prescription to the pharmacist.\nElla le dio la receta al farmacéutico.</string>
    <string name="aliciafive">The pharmacist filled the prescription and gave her the medicine.\nEl farmacéutico llenó la receta y le dio el medicamento.</string>
    <string name="aliciasix">Alicia asked the pharmacist, "How do I take this medicine?"\nAlicia le preguntó al farmacéutico: "¿Cómo tomo este medicamento?"</string>
    <string name="aliciaseven">The pharmacist said, "Take two, twice a day."\nEl farmacéutico dijo: "Tome dos, dos veces al día".</string>
    <string name="aq1">1. What is the name of the medicine?\n¿Cuál es el nombre de la medicina?</string>
    <string name="aq2">2. How much medicine will Alicia take each day?\n¿Cuánta medicina tomará Alicia cada día?</string>
    <string name="aq3">3. How often will she take it each day?\n¿Con qué frecuencia lo tomará cada día?</string>
    <string name="aq4">4. How many pills are in the bottle?\n¿Cuántas pastillas hay en la botella?</string>
    <string name="aq5">5. What does the warning label say?\n¿Qué dice la etiqueta de advertencia?</string>
    <string name="larisaone">Larisa\'s family eats too much meat and not enough fruits and vegetables. Larisa wants to make her family a healthy meal.\nLa familia de Larisa come demasiada carne y no tienes suficientes frutas y verduras. Larisa quiere hacer de su familia una comida saludable.</string>
    <string name="larisatwo">Help Larisa make a healthy meal for her family. Choose food from the five food groups.\nAyuda a Larisa a preparar una comida saludable para su familia. Elija alimentos de los cinco grupos de alimentos.</string>
    <string name="choose"><b>Choose One / Elige Uno</b></string>
    <string name="fruit"><b>Fruits/Frutas:</b></string>
    <string name="apples">Apples/Manzanas</string>
    <string name="bananas">Bananas/Plátanos</string>
    <string name="grapes">Grapes/Uvas</string>
    <string name="oranges">Oranges/Naranjas</string>
    <string name="strawberries">Strawberries/Fresas</string>
    <string name="vegetable"><b>Vegetables/Vegetales:</b></string>
    <string name="broccoli">Broccoli/Brócoli</string>
    <string name="carrots">Carrots/Zanahorias</string>
    <string name="peas">Peas/Chícharos</string>
    <string name="spinach">Spinach/Espinacas</string>
    <string name="string_beans">String Beans/Judías Verdes</string>
    <string name="grain"><b>Grains/Granos:</b></string>
    <string name="brown_rice">Brown Rice/Arroz Integral</string>
    <string name="corn_bread">Corn Bread/Pan de Maíz</string>
    <string name="pasta">Pasta</string>
    <string name="tortillas">Tortillas</string>
    <string name="wheat_bread">Wheat Bread/Pan de Trigo</string>
    <string name="protein"><b>Protein/Proteína:</b></string>
    <string name="beef">Beef/Carne de Vaca</string>
    <string name="black_beans">Black Beans/Frijoles Negros</string>
    <string name="chicken">Chicken/Pollo</string>
    <string name="nuts">Nuts/Nueces</string>
    <string name="fish">Fish/Pez</string>
    <string name="dairy"><b>Dairy/Lechería:</b></string>
    <string name="cheese">Cheese/Queso</string>
    <string name="milk">Milk/Leche</string>
    <string name="yogurt">Yogurt/Yogur</string>
    <string name="another_meal">Make Another Meal\n/ Hacer Otra Comida</string>
    <string name="meal">Your Meal / Tu Comida</string>
    <string name="make_another">Would you like to make another?\n¿Te gustaría hacer otro?</string>
    <string name="select_takepart">Select a Take Parts activity to load.\nSeleccione una actividad Tomar partes para cargar.</string>
    <string name="take_part1">Chapter Two:\nBody Parts</string>
    <string name="take_part2">Chapter Three:\nMedicine Label</string>
    <string name="take_part3">Chapter Three:\nLabel Exercise</string>
    <string name="take_part4">Chapter Four:\nVitamins</string>
    <string name="drag_correct">Drag the correct word on to the correct spot.</string>
    <string name="arm">Arm</string>
    <string name="eyes">Eyes</string>
    <string name="ear">Ear</string>
    <string name="nose">Nose</string>
    <string name="lips">Lips</string>
    <string name="neck">Neck</string>
    <string name="back_button_text">Back / Regreso</string>
    <string name="forward_button_text">Next / Adelante</string>
    <string name="empty"></string>
    <string name="wordbank">Word Bank:</string>
    <string name="reset">Reset / Reinciar</string>
    <string name="t1_random_word_button">Random Word</string>
    <string name="t1_definition_button">Show Definition</string>
    <string name="t1_nextWord">Next Word</string>
    <string name="t1_previousWord">Previous Word</string>
    <string name="play_word">Play Word</string>
    <string name="play_definition">Play Definition</string>
    <string name="term_placeholder">%1$s</string>
    <string name="definition_placeholder">%1$s</string>
    <string name="chapter_placeholder">Chapter %1$d</string>
    <string name="ch1Reading">Reading: Where Do I Go For Health Care?</string>
    <string name="ch1Speaking">Speaking: Setting Up an Appointment</string>
    <string name="ch2Reading">Reading: What will the doctor ask me?</string>
    <string name="ch2Reading2">Reading: What will I ask the doctor?</string>
    <string name="ch2Speaking">Speaking: Getting Medicine</string>
    <string name="ch2BodyParts">Speaking: Body Parts</string>
    <string name="ch3Speaking">Speaking: Over the Counter Medication</string>
    <string name="ch4Reading">Reading: What is healthy eating?</string>
    <string name="ch4Reading2">Reading: More Variety in Your Diet</string>
    <string name="ch4Reading3">Reading: Eat More Fruits and Vegetables</string>
    <string name="ch4Speaking">Speaking: Fruits and Vegetables</string>
</resources>