<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    tools:context=".TakePartsHead">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back_button_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="370dp"
        android:layout_height="450dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/takepartsbodytwo" />

    <TextView
        android:id="@+id/HeadBox"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="194dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/ShoulderBox"
        android:layout_width="36dp"
        android:layout_height="25dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/ChestBox"
        android:layout_width="51dp"
        android:layout_height="21dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/HeadBox" />

    <TextView
        android:id="@+id/StomachBox"
        android:layout_width="41dp"
        android:layout_height="21dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/ShoulderBox" />

    <TextView
        android:id="@+id/ArmBox"
        android:layout_width="46dp"
        android:layout_height="21dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/StomachBox" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/drag_correct"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <Button
        android:id="@+id/forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="54dp"
        android:text="@string/forward_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/errorBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="104dp"
        android:textColor="@color/wrong_answer"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/word_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="72dp"
        android:text="@string/wordbank"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eyesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/eyes"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_bank" />

    <TextView
        android:id="@+id/earInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="53dp"
        android:text="@string/ear"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eyesInput" />

    <TextView
        android:id="@+id/noseInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="53dp"
        android:text="@string/nose"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/earInput" />

    <TextView
        android:id="@+id/neckInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/neck"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toEndOf="@+id/lipsInput"
        app:layout_constraintTop_toBottomOf="@+id/earInput" />

    <TextView
        android:id="@+id/lipsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lips"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eyesInput" />
</androidx.constraintlayout.widget.ConstraintLayout>
